<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">BLE_RFID</string>	
	<string name="action_settings">Settings</string>	
	<string name="title_activity_setting">SettingActivity</string>
	<string name="title_activity_splash">SplashActivity</string>
	<string name="title_activity_card_info">CardInfoActivity</string>
	<string name="title_activity_tag_memory">TagMemoryActivity</string>
	<string name="title_activity_option">OptionActivity</string>		
	<string name="title_activity_pop_setting">PopSettingActivity</string>
	<string name="title_activity_app_setting">AppSettingActivity</string>
	<string name="title_activity_pop_information">PopInformationActivity</string>	
	<string name="title_activity_tag_access">TagAccessActivity</string>
	<string name="title_activity_on_off_time">OnOffTimeActivity</string>
	<string name="title_activity_out_put_power">OutPutPowerActivity</string>
	<string name="title_activity_stop_condisions">StopCondisionsActivity</string>
	<string name="title_activity_lock">LockActivity</string>
	<string name="title_activity_kill">KillActivity</string>	
	<string name="title_activity_channel">ChannelActivity</string>	
	<string name="title_activity_read">ReadWriteActivity</string>
    <string name="sensor_read">Sensor Read :</string>
	<string name="_0">0%</string>
	<string name="todo">TODO</string>
	<string name="rfm">RFM</string>
	<string name="battery">Battery</string>
	<string name="read">Read</string>
	<string name="clear">Clear</string>
	<string name="stop">Stop</string>
	<string name="asreader">AsReader</string>
	<string name="more">More</string>
	<string name="_0_tags">0 tags</string>
	<string name="unplugged">Unplugged</string>
    <string name="dist">dist</string>
    <string name="finishSearch">探し物発見</string>
    <string name="back">Back</string>
	<string name="button">Button</string>
	<string name="textview">TextView</string>
    <string name="finish">finish</string>
</resources>