<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="541dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/azimuth"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="aaa"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/CalibrateText"
            android:layout_width="match_parent"
            android:layout_height="243dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Check"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>