<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/view_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/nav_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_log"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/log_otg"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="visible"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/img_lbs"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/img_log"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="invisible"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/titlebar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:shadowColor="#80000000"
            android:shadowDy="-1.0"
            android:shadowRadius="1.0"
            android:text="@string/asreader"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titlebar_text"
            android:layout_centerHorizontal="true"
            android:shadowColor="#80000000"
            android:shadowDy="-1.0"
            android:shadowRadius="1.0"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/option"
            android:layout_width="70dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/btn_click"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/more"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/nav_btn_text_colors" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#696969" >

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#A9A9A9"
            android:gravity="center"
            android:text="@string/_0_tags"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/aboutvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.8"
            android:background="#A9A9A9"
            android:gravity="center"
            android:text="@string/unplugged"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#A9A9A9"
            android:gravity="center"
            android:text="@string/_0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/listview_tag_bg"
            android:divider="@drawable/listview_divider"
            android:dividerHeight="1pt" >
        </ListView>

        <ListView
            android:id="@+id/tag_list_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@drawable/listview_tag_bg"
            android:choiceMode="none"
            android:clickable="false"
            android:divider="@drawable/listview_divider"
            android:dividerHeight="1dp"
            android:duplicateParentState="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:longClickable="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/nav_bg"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="0"
            android:background="@drawable/nav_bg"
            android:padding="3dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sensor_read"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_ext_rfm"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_click"
                android:text="@string/rfm"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/nav_btn_text_colors" />

            <Button
                android:id="@+id/btn_battery"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_click"
                android:text="@string/battery"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/nav_btn_text_colors_battery" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="0"
            android:background="@drawable/nav_bg"
            android:padding="3dp">

            <ToggleButton
                android:id="@+id/power_onoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/toggle_switch"
                android:text=""
                android:textOff=""
                android:textOn="" />

            <Button
                android:id="@+id/btn_ext_read"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_click"
                android:text="@string/read"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/nav_btn_text_colors" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_click"
                android:text="@string/clear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/nav_btn_text_colors" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_click"
                android:text="@string/stop"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/nav_btn_text_colors" />

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            app:menu="@menu/item_bottom_navigation" />
    </LinearLayout>
</LinearLayout>